tests/ui/frontmatter/frontmatter-ignored-space.rs


---  
//~^ ERROR expected item, found `-`

---  

#![feature(frontmatter)]
// ignore-tidy-end-whitespace
// ignore-tidy-leading-newlines

fn main() {
}
